--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dark-star-studio</title>
+    <title>Harshit Arora Portfolio</title>
     <meta name="description" content="Harshit Arora Portfolio">
     <meta name="author" content="Lovable" />
 
